compiler/test-data/parser/control/errors/when_missing_body.frel
module test

blueprint Bad {
    when true
}
